--- a/index.html
+++ b/index.html
@@ -171,6 +171,16 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Kapat"></button>
                 </div>
                 <div class="modal-body">
+                    <div class="alert alert-info mb-3">
+                        <h6 class="alert-heading"><i class="bi bi-info-circle me-2"></i>E-Okul'dan PDF İndirme Adımları:</h6>
+                        <ol class="mb-0 ps-3">
+                            <li>https://e-okul.meb.gov.tr adresinden giriş yapın.</li>
+                            <li>Sol Menüden "Öğrenci İşlemleri"ne gidin.</li>
+                            <li>Raporlar kısmından "Sınıf Listesi (Öğrenci No Sıralı)" seçin.</li>
+                            <li>Listeyi görüntüleyin ve PDF olarak indirin.</li>
+                            <li>İndirdiğiniz dosyayı aşağıdaki alana yükleyin.</li>
+                        </ol>
+                    </div>
                     <div class="mb-3">
                         <label for="pdf-file" class="form-label">PDF Dosyası Seçin</label>
                         <input class="form-control" type="file" id="pdf-file" accept=".pdf">
